aded section socialnetwork

--- a/app/index.html
+++ b/app/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
   <meta charset="UTF-8" />
@@ -9,13 +9,8 @@
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link
-    href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,600&display=swap"
-    rel="stylesheet" />
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link
-    href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,500;0,600;0,700;0,800;1,300;1,500&display=swap"
-    rel="stylesheet" />
+    href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&family=Raleway:wght@400;600&display=swap"
+    rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
   <link rel="stylesheet" href="css/normalize.css" />
   <!-- <link rel="stylesheet" href="css/style.css"> -->
@@ -65,7 +60,7 @@
 
   <section class="retush">
     <div class="container">
-      <div class="retush__info">
+      <div class="retush__info block__info">
         <h2 class="section__title">Портрет в стекле для памятников</h2>
         <p class="retush__description">
           Фотография в стекле может устанавливаться на памятниках, не боясь,
@@ -137,7 +132,7 @@
 
   <section class="beliyfon" id="fon">
     <div class="container">
-      <div class="beliyfon__info">
+      <h2 class="beliyfon__info block__info">
         <div class="section__title">Замена фона</div>
         <p class="retush__description">
           Бывает довольно часто нужно выполнить замену фона. Дело в том, что
@@ -145,7 +140,7 @@
           чтобы сделать фотографию более эффектной, нужно заменить этот фон на
           более привлекательный.
         </p>
-      </div>
+      </h2>
       <div class="beliyfon__inner">
         <div class="beliyfon__item">
           <img class="beliyfon__item-img" src="images/beliyfon-1.jpg" alt="beliyfon-1" />
@@ -182,10 +177,59 @@
     </div>
   </section>
 
+  <section class="socialnetwork">
+    <div class="container">
+      <div class="socialnetwork__info block__info">
+        <h2 class="section__title">Обработка фото для вашего каталога или социальных сетей.</h2>
+        <p class="retush__description">
+          Делаем классные фото для размещения их в Инстаграме, фейсбуке, линкедине и других социальных сетях которые
+          идеально впишутся в ваш профиль.
+        </p>
+      </div>
+      <div class="socialnetwork-slider">
+        <div class="socialnetwork__swiper swiper">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide">
+              <img class="socialnetwork__img" src="images/retysh_1.jpg" alt="retush-1">
+            </div>
+            <div class="swiper-slide">
+              <img class="socialnetwork__img" src="images/retysh_2.jpg" alt="retush-2">
+            </div>
+            <div class="swiper-slide">
+              <img class="socialnetwork__img" src="images/retysh_3.jpg" alt="retush-3">
+            </div>
+            <div class="swiper-slide">
+              <img class="socialnetwork__img" src="images/retysh_4.jpg" alt="retush-4">
+            </div>
+            <div class="swiper-slide">
+              <img class="socialnetwork__img" src="images/retysh_5.jpg" alt="retush-5">
+            </div>
+            <div class="swiper-slide">
+              <img class="socialnetwork__img" src="images/retysh_6.jpg" alt="retush-6">
+            </div>
+            <div class="swiper-slide">
+              <img class="socialnetwork__img" src="images/retysh_7.jpg" alt="retush-7">
+            </div>
+          </div>
+        </div>
+
+        <div class="socialnetwork__pagination"></div>
+
+        <div class="socialnetwork__button socialnetwork-button-left">
+          <img src="images/arrow-prev.svg" alt="arrow-prev" class="button__img" />
+        </div>
+        <div class="socialnetwork__button socialnetwork-button-right">
+          <img src="images/arrow-next.svg" alt="arrow-next" class="button__img" />
+        </div>
+
+      </div>
+    </div>
+  </section>
+
   <section class="color" id="cvet">
     <div class="container">
-      <div class="color__info">
-        <div class="section__title">Перевод в цвет</div>
+      <div class="color__info block__info">
+        <h2 class="section__title">Перевод в цвет</h2>
         <p class="retush__description">
           Если имеются черно-белые фотографии в цифровом видео на компьютере и
           желаете превратить их в цветные, то я с удовольствием для вас это
@@ -211,8 +255,8 @@
 
   <section class="restavratciya" id="rest">
     <div class="container">
-      <div class="restavratciya__info">
-        <div class="section__title">Реставрация старых фотографий</div>
+      <div class="restavratciya__info block__info">
+        <h2 class="section__title">Реставрация старых фотографий</h2>
         <p class="retush__description">
           Реставрация, восстановление старых фотографий - это процесс,
           призванный обновить фото, не утратив ощущение настоящей фотографии
@@ -238,8 +282,8 @@
 
   <section class="cvetocorrekciya" id="cvetcor">
     <div class="container">
-      <div class="cvetocorrekciya__info">
-        <div class="section__title">Цветокоррекция</div>
+      <div class="cvetocorrekciya__info block__info">
+        <h2 class="section__title">Цветокоррекция</h2>
         <p class="retush__description">
           Цветокоррекция — изменение цветовых составляющих изображения:
           оттенка, тона, насыщенности и т. д.
@@ -258,8 +302,8 @@
 
   <section class="albom" id="vipusk">
     <div class="container">
-      <div class="albom__info">
-        <div class="section__title">Монтаж выпускных альбомов</div>
+      <div class="albom__info block__info">
+        <h2 class="section__title">Монтаж выпускных альбомов</h2>
         <p class="retush__description">
           Дети так быстро растут .. еще вчера вы держали в руках самый
           заветный конверт с вашим малышом, а уже сегодня ваша кроха
