--- a/app/index.html
+++ b/app/index.html
@@ -9,7 +9,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link
-    href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&family=Raleway:wght@400;600&display=swap"
+    href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Merriweather:wght@400;700&family=Raleway:wght@400;600&display=swap"
     rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
   <link rel="stylesheet" href="css/normalize.css" />
@@ -17,18 +17,19 @@
   <link rel="stylesheet" href="css/main.css" />
 </head>
 
+
 <body>
   <header class="header">
     <div class="container">
       <div class="header__inner">
         <a class="header__logo" href="#">
-          <img class="header__logo-img" src="images/header-logo.png" alt="header-logo" />
+          <img class="header__logo-img" src="images/header__logo.svg" alt="header-logo" />
         </a>
         <a class="header__logo-white" href="#">
-          <img class="header__logo-img" src="images/header-logo_white.png" alt="header-logo_white" />
+          <img class="header__logo-img" src="images/header__logo-white.svg" alt="header-logo_white" />
         </a>
         <nav class="menu">
-          <div class="burger-menu">
+          <div class="burger__menu">
             <span></span>
             <span></span>
             <span></span>
@@ -54,11 +55,33 @@
             </li>
           </ul>
         </nav>
+        <div class="header__contacts">
+          <a class="header__contacts-phone" href="tel:380966122321">+380966122321</a>
+          <div class="header__social">
+            <ul class="header__social-list">
+              <li class="social__list-item">
+                <a class="social__list-link" href="https://www.facebook.com/voron.zt/" target="_blank">
+                  <img class="social__img" src="images/facebook.svg" alt="icon-facebook" />
+                </a>
+              </li>
+              <li class="social__list-item">
+                <a class="social__list-link" href="https://www.linkedin.com/in/khimichdmitriy/" target="_blank">
+                  <img class="social__img" src="images/linkedin.svg" alt="icon-linkedin" />
+                </a>
+              </li>
+              <li class="social__list-item">
+                <a class="social__list-link" href="https://www.instagram.com/dima.retush/" target="_blank">
+                  <img class="social__img" src="images/instagram.svg" alt="icon-instagram" />
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
       </div>
     </div>
   </header>
 
-  <section class="retush">
+  <!-- <section class="retush">
     <div class="container">
       <div class="retush__info block__info">
         <h2 class="section__title">Портрет в стекле для памятников</h2>
@@ -408,14 +431,13 @@
         <div class="footer__item">
           <h4 class="footer__item-title">Мои контакты:</h4>
           <div class="footer__phone">
-            Тел.:
-            <a class="phone__link" href="tel:0966122321">(096) 612-23-21</a>
+            <a class="phone__link" href="tel:380966122321">+380966122321</a>
           </div>
           <div class="footer__social">
-            <ul class="social__list">
+            <ul class="social__list footer__social-list">
               <li class="social__list-item">
                 <a class="social__list-link" href="https://www.facebook.com/voron.zt/" target="_blank">
-                  <img class="social__img" src="images/facebook_1.svg" alt="icon-facebook" />
+                  <img class="social__img" src="images/facebook.svg" alt="icon-facebook" />
                 </a>
               </li>
               <li class="social__list-item">
@@ -433,7 +455,7 @@
         </div>
       </div>
     </div>
-  </footer>
+  </footer> -->
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
