adaptiv of half document

--- a/app/index.html
+++ b/app/index.html
@@ -29,7 +29,7 @@
           <img class="header__logo-img" src="images/header__logo-white.svg" alt="header-logo_white" />
         </a>
         <nav class="menu">
-          <div class="burger__menu">
+          <div class="burger__menu burger__menu-white">
             <span></span>
             <span></span>
             <span></span>
@@ -81,7 +81,7 @@
     </div>
   </header>
 
-  <!-- <section class="retush">
+  <section class="retush">
     <div class="container">
       <div class="retush__info block__info">
         <h2 class="section__title">Портрет в стекле для памятников</h2>
@@ -152,6 +152,8 @@
       </div>
     </div>
   </section>
+
+
 
   <section class="beliyfon" id="fon">
     <div class="container">
@@ -276,6 +278,7 @@
     </div>
   </section>
 
+
   <section class="restavratciya" id="rest">
     <div class="container">
       <div class="restavratciya__info block__info">
@@ -303,6 +306,7 @@
     </div>
   </section>
 
+
   <section class="cvetocorrekciya" id="cvetcor">
     <div class="container">
       <div class="cvetocorrekciya__info block__info">
@@ -323,6 +327,7 @@
     </div>
   </section>
 
+  <!--
   <section class="albom" id="vipusk">
     <div class="container">
       <div class="albom__info block__info">
