--- a/app/index.html
+++ b/app/index.html
@@ -327,7 +327,7 @@
     </div>
   </section>
 
-  <!--
+
   <section class="albom" id="vipusk">
     <div class="container">
       <div class="albom__info block__info">
@@ -460,7 +460,7 @@
         </div>
       </div>
     </div>
-  </footer> -->
+  </footer>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
